build(client): update fabric dependencies